--- a/quest/startups/startups.ipynb
+++ b/quest/startups/startups.ipynb
@@ -491,209 +491,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "6334571c",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>rule_of_law</th>\n",
-       "      <th>GDP_blnUSD</th>\n",
-       "      <th>GDP_per_capita_tUSD</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Innovation Score</th>\n",
-       "      <th>Tax Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.330643</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>41128771</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.487371</td>\n",
-       "      <td>18.012</td>\n",
-       "      <td>6.337075</td>\n",
-       "      <td>2842321</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.486329</td>\n",
-       "      <td>168.195</td>\n",
-       "      <td>3.745722</td>\n",
-       "      <td>44903225</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.426499</td>\n",
-       "      <td>74.953</td>\n",
-       "      <td>2.106073</td>\n",
-       "      <td>35588987</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Antigua and Barbuda</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.631118</td>\n",
-       "      <td>1.534</td>\n",
-       "      <td>16.360398</td>\n",
-       "      <td>93763</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Uruguay</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.713884</td>\n",
-       "      <td>63.741</td>\n",
-       "      <td>18.622505</td>\n",
-       "      <td>3422794</td>\n",
-       "      <td>29.2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Uzbekistan</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.496016</td>\n",
-       "      <td>72.762</td>\n",
-       "      <td>2.101269</td>\n",
-       "      <td>34627652</td>\n",
-       "      <td>25.3</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.489195</td>\n",
-       "      <td>415.493</td>\n",
-       "      <td>4.231656</td>\n",
-       "      <td>98186856</td>\n",
-       "      <td>34.2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.449881</td>\n",
-       "      <td>23.967</td>\n",
-       "      <td>1.197292</td>\n",
-       "      <td>20017675</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>0.391414</td>\n",
-       "      <td>27.806</td>\n",
-       "      <td>1.703743</td>\n",
-       "      <td>16320537</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>131 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Country  Year  rule_of_law  GDP_blnUSD  GDP_per_capita_tUSD  \\\n",
-       "0            Afghanistan  2022     0.330643       0.000             0.000000   \n",
-       "1                Albania  2022     0.487371      18.012             6.337075   \n",
-       "2                Algeria  2022     0.486329     168.195             3.745722   \n",
-       "3                 Angola  2022     0.426499      74.953             2.106073   \n",
-       "4    Antigua and Barbuda  2022     0.631118       1.534            16.360398   \n",
-       "..                   ...   ...          ...         ...                  ...   \n",
-       "126              Uruguay  2022     0.713884      63.741            18.622505   \n",
-       "127           Uzbekistan  2022     0.496016      72.762             2.101269   \n",
-       "128              Vietnam  2022     0.489195     415.493             4.231656   \n",
-       "129               Zambia  2022     0.449881      23.967             1.197292   \n",
-       "130             Zimbabwe  2022     0.391414      27.806             1.703743   \n",
-       "\n",
-       "     Population  Innovation Score  Tax Score  \n",
-       "0      41128771               0.0        0.0  \n",
-       "1       2842321              24.4        0.0  \n",
-       "2      44903225              16.7        0.0  \n",
-       "3      35588987              13.9        0.0  \n",
-       "4         93763               0.0        0.0  \n",
-       "..          ...               ...        ...  \n",
-       "126     3422794              29.2        0.0  \n",
-       "127    34627652              25.3        0.0  \n",
-       "128    98186856              34.2        0.0  \n",
-       "129    20017675              15.8        0.0  \n",
-       "130    16320537              18.1        0.0  \n",
-       "\n",
-       "[131 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Country  Year  rule_of_law  GDP_blnUSD  GDP_per_capita_tUSD  \\\n",
+      "0            Afghanistan  2022     0.330643       0.000             0.000000   \n",
+      "1                Albania  2022     0.487371      18.012             6.337075   \n",
+      "2                Algeria  2022     0.486329     168.195             3.745722   \n",
+      "3                 Angola  2022     0.426499      74.953             2.106073   \n",
+      "4    Antigua and Barbuda  2022     0.631118       1.534            16.360398   \n",
+      "..                   ...   ...          ...         ...                  ...   \n",
+      "126              Uruguay  2022     0.713884      63.741            18.622505   \n",
+      "127           Uzbekistan  2022     0.496016      72.762             2.101269   \n",
+      "128              Vietnam  2022     0.489195     415.493             4.231656   \n",
+      "129               Zambia  2022     0.449881      23.967             1.197292   \n",
+      "130             Zimbabwe  2022     0.391414      27.806             1.703743   \n",
+      "\n",
+      "     Population  Innovation Score  Tax Score  Innovation Score  Tax Score  \\\n",
+      "0      41128771               0.0        0.0               0.0        0.0   \n",
+      "1       2842321              24.4        0.0              24.4        0.0   \n",
+      "2      44903225              16.7        0.0              16.7        0.0   \n",
+      "3      35588987              13.9        0.0              13.9        0.0   \n",
+      "4         93763               0.0        0.0               0.0        0.0   \n",
+      "..          ...               ...        ...               ...        ...   \n",
+      "126     3422794              29.2        0.0              29.2        0.0   \n",
+      "127    34627652              25.3        0.0              25.3        0.0   \n",
+      "128    98186856              34.2        0.0              34.2        0.0   \n",
+      "129    20017675              15.8        0.0              15.8        0.0   \n",
+      "130    16320537              18.1        0.0              18.1        0.0   \n",
+      "\n",
+      "     Innovation Score  Tax Score  \n",
+      "0                 0.0        0.0  \n",
+      "1                24.4        0.0  \n",
+      "2                16.7        0.0  \n",
+      "3                13.9        0.0  \n",
+      "4                 0.0        0.0  \n",
+      "..                ...        ...  \n",
+      "126              29.2        0.0  \n",
+      "127              25.3        0.0  \n",
+      "128              34.2        0.0  \n",
+      "129              15.8        0.0  \n",
+      "130              18.1        0.0  \n",
+      "\n",
+      "[131 rows x 12 columns]\n"
+     ]
     }
    ],
    "source": [
     "# concating tables\n",
     "countries_main=pd.concat([countries_main, countries_tax_inn.iloc[:, 1:]], axis=1)\n",
-    "countries_main"
+    "countries_main.isnull().sum()\n",
+    "print(countries_main)"
    ]
   },
   {
@@ -1399,161 +1254,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "1f924ac4",
+   "execution_count": 27,
+   "id": "052002ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>number</th>\n",
-       "      <th>name</th>\n",
-       "      <th>Valuation_US_billions</th>\n",
-       "      <th>Valuation_date</th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Size_group</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>rule_of_law</th>\n",
-       "      <th>GDP_blnUSD</th>\n",
-       "      <th>GDP_per_capita_tUSD</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Innovation Score</th>\n",
-       "      <th>Tax Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1Password</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>July 2021[84]</td>\n",
-       "      <td>Password manager</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>huge</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.330643</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>41128771.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>58 Daojia</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>October 2015[124]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>China</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.487371</td>\n",
-       "      <td>18.012</td>\n",
-       "      <td>6.337075</td>\n",
-       "      <td>2842321.0</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5ire</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>July 2022[570]</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>India</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.486329</td>\n",
-       "      <td>168.195</td>\n",
-       "      <td>3.745722</td>\n",
-       "      <td>44903225.0</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6sense</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>March 2021[266]</td>\n",
-       "      <td>Artificial intelligence</td>\n",
-       "      <td>US</td>\n",
-       "      <td>large</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.426499</td>\n",
-       "      <td>74.953</td>\n",
-       "      <td>2.106073</td>\n",
-       "      <td>35588987.0</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Acko</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>October 2021[418]</td>\n",
-       "      <td>Insurance</td>\n",
-       "      <td>India</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.631118</td>\n",
-       "      <td>1.534</td>\n",
-       "      <td>16.360398</td>\n",
-       "      <td>93763.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   number       name  Valuation_US_billions     Valuation_date  \\\n",
-       "0       0  1Password                    6.8      July 2021[84]   \n",
-       "1       1  58 Daojia                    1.0  October 2015[124]   \n",
-       "2       2       5ire                    1.5     July 2022[570]   \n",
-       "3       3     6sense                    2.1    March 2021[266]   \n",
-       "4       4       Acko                    1.1  October 2021[418]   \n",
-       "\n",
-       "                  Industry Country Size_group    Year  rule_of_law  \\\n",
-       "0         Password manager  Canada       huge  2022.0     0.330643   \n",
-       "1                      NaN   China     medium  2022.0     0.487371   \n",
-       "2               Technology   India     medium  2022.0     0.486329   \n",
-       "3  Artificial intelligence      US      large  2022.0     0.426499   \n",
-       "4                Insurance   India     medium  2022.0     0.631118   \n",
-       "\n",
-       "   GDP_blnUSD  GDP_per_capita_tUSD  Population  Innovation Score  Tax Score  \n",
-       "0       0.000             0.000000  41128771.0               0.0        0.0  \n",
-       "1      18.012             6.337075   2842321.0              24.4        0.0  \n",
-       "2     168.195             3.745722  44903225.0              16.7        0.0  \n",
-       "3      74.953             2.106073  35588987.0              13.9        0.0  \n",
-       "4       1.534            16.360398     93763.0               0.0        0.0  "
+       "number                   611\n",
+       "name                     611\n",
+       "Valuation_US_billions    121\n",
+       "Valuation_date           571\n",
+       "Industry                 150\n",
+       "Country                   46\n",
+       "Size_group                 3\n",
+       "Year                       1\n",
+       "rule_of_law              131\n",
+       "GDP_blnUSD               121\n",
+       "GDP_per_capita_tUSD      121\n",
+       "Population               130\n",
+       "Innovation Score          97\n",
+       "Tax Score                 35\n",
+       "Innovation Score          97\n",
+       "Tax Score                 35\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1294,8 @@
     "full_table=pd.concat([startups_gr, countries_main.iloc[:, 1:]], axis=1)\n",
     "full_table\n",
     "\n",
-    "full_table.head()"
+    "full_table.isnull().sum()\n",
+    "full_table.nunique()"
    ]
   }
  ],
