--- a/quest/startups/startups.ipynb
+++ b/quest/startups/startups.ipynb
@@ -1254,8 +1254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "052002ed",
+   "execution_count": 51,
+   "id": "f97bedf3",
    "metadata": {},
    "outputs": [
     {
@@ -1265,22 +1265,20 @@
        "name                     611\n",
        "Valuation_US_billions    121\n",
        "Valuation_date           571\n",
-       "Industry                 150\n",
+       "Industry                 151\n",
        "Country                   46\n",
        "Size_group                 3\n",
        "Year                       1\n",
-       "rule_of_law              131\n",
-       "GDP_blnUSD               121\n",
-       "GDP_per_capita_tUSD      121\n",
-       "Population               130\n",
-       "Innovation Score          97\n",
-       "Tax Score                 35\n",
-       "Innovation Score          97\n",
-       "Tax Score                 35\n",
+       "rule_of_law               46\n",
+       "GDP_blnUSD                44\n",
+       "GDP_per_capita_tUSD       44\n",
+       "Population                45\n",
+       "Innovation_Score          43\n",
+       "Tax_Score                 29\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,12 +1288,349 @@
     "startups_gr=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/quest/startups/tables/startups_with%20size_group_12.csv')\n",
     "startups_gr\n",
     "\n",
+    "#updated table from sql for countries\n",
+    "countries=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/quest/startups/tables/countries_from_sql_for%20correlation.csv')\n",
+    "\n",
     "#concatingating with other table\n",
-    "full_table=pd.concat([startups_gr, countries_main.iloc[:, 1:]], axis=1)\n",
+    "full_table=pd.merge(startups_gr, countries, on='Country')\n",
     "full_table\n",
     "\n",
     "full_table.isnull().sum()\n",
+    "#full_table.count()\n",
+    "\n",
+    "#cleaning nulls with \"not known\" for industries\n",
+    "full_table=full_table.fillna('not known')\n",
+    "\n",
+    "full_table.isnull().sum()\n",
     "full_table.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "de72bca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>Valuation_US_billions</th>\n",
+       "      <th>Valuation_date</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Size_group</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>rule_of_law</th>\n",
+       "      <th>GDP_blnUSD</th>\n",
+       "      <th>GDP_per_capita_tUSD</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Innovation_Score</th>\n",
+       "      <th>Tax_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1Password</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>July 2021[84]</td>\n",
+       "      <td>Password manager</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>huge</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.799884</td>\n",
+       "      <td>2189.790</td>\n",
+       "      <td>56.94520</td>\n",
+       "      <td>38454327</td>\n",
+       "      <td>50.80</td>\n",
+       "      <td>69.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Ada</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>May 2021[399]</td>\n",
+       "      <td>Software</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.799884</td>\n",
+       "      <td>2189.790</td>\n",
+       "      <td>56.94520</td>\n",
+       "      <td>38454327</td>\n",
+       "      <td>50.80</td>\n",
+       "      <td>69.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>ApplyBoard</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>June 2021[183]</td>\n",
+       "      <td>Educational technology</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>large</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.799884</td>\n",
+       "      <td>2189.790</td>\n",
+       "      <td>56.94520</td>\n",
+       "      <td>38454327</td>\n",
+       "      <td>50.80</td>\n",
+       "      <td>69.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Assent Compliance</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>January 2022[446]</td>\n",
+       "      <td>Supply chain management</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.799884</td>\n",
+       "      <td>2189.790</td>\n",
+       "      <td>56.94520</td>\n",
+       "      <td>38454327</td>\n",
+       "      <td>50.80</td>\n",
+       "      <td>69.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>55</td>\n",
+       "      <td>Benevity</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>December 2020[429]</td>\n",
+       "      <td>Software as a service</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.799884</td>\n",
+       "      <td>2189.790</td>\n",
+       "      <td>56.94520</td>\n",
+       "      <td>38454327</td>\n",
+       "      <td>50.80</td>\n",
+       "      <td>69.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>440</td>\n",
+       "      <td>Printful</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>May 2021[524]</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Latvia</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.722524</td>\n",
+       "      <td>40.830</td>\n",
+       "      <td>22.06250</td>\n",
+       "      <td>1850651</td>\n",
+       "      <td>36.50</td>\n",
+       "      <td>89.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>451</td>\n",
+       "      <td>Rappi</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>July 2021[108]</td>\n",
+       "      <td>Transportation</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>huge</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.483858</td>\n",
+       "      <td>319.290</td>\n",
+       "      <td>6.15510</td>\n",
+       "      <td>51874024</td>\n",
+       "      <td>29.20</td>\n",
+       "      <td>57.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>608</th>\n",
+       "      <td>469</td>\n",
+       "      <td>Rohlik</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>June 2021[414]</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.730000</td>\n",
+       "      <td>290.000</td>\n",
+       "      <td>27.53300</td>\n",
+       "      <td>10533000</td>\n",
+       "      <td>44.83</td>\n",
+       "      <td>71.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>490</td>\n",
+       "      <td>Sky Mavis</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>October 2021[211]</td>\n",
+       "      <td>Video games</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>large</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.489195</td>\n",
+       "      <td>415.493</td>\n",
+       "      <td>4.23166</td>\n",
+       "      <td>98186856</td>\n",
+       "      <td>34.20</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>596</td>\n",
+       "      <td>Wave</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>September 2021[324]</td>\n",
+       "      <td>Financial technology</td>\n",
+       "      <td>Senegal</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.560840</td>\n",
+       "      <td>30.039</td>\n",
+       "      <td>1.73471</td>\n",
+       "      <td>17316449</td>\n",
+       "      <td>19.90</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>611 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     number               name  Valuation_US_billions       Valuation_date  \\\n",
+       "0         0          1Password                   6.80        July 2021[84]   \n",
+       "1         8                Ada                   1.20        May 2021[399]   \n",
+       "2        35         ApplyBoard                   3.20       June 2021[183]   \n",
+       "3        44  Assent Compliance                   1.00    January 2022[446]   \n",
+       "4        55           Benevity                   1.10   December 2020[429]   \n",
+       "..      ...                ...                    ...                  ...   \n",
+       "606     440           Printful                   1.00        May 2021[524]   \n",
+       "607     451              Rappi                   5.25       July 2021[108]   \n",
+       "608     469             Rohlik                   1.20       June 2021[414]   \n",
+       "609     490          Sky Mavis                   3.00    October 2021[211]   \n",
+       "610     596               Wave                   1.70  September 2021[324]   \n",
+       "\n",
+       "                    Industry         Country Size_group  Year  rule_of_law  \\\n",
+       "0           Password manager          Canada       huge  2022     0.799884   \n",
+       "1                   Software          Canada     medium  2022     0.799884   \n",
+       "2     Educational technology          Canada      large  2022     0.799884   \n",
+       "3    Supply chain management          Canada     medium  2022     0.799884   \n",
+       "4      Software as a service          Canada     medium  2022     0.799884   \n",
+       "..                       ...             ...        ...   ...          ...   \n",
+       "606               Technology          Latvia     medium  2022     0.722524   \n",
+       "607           Transportation        Colombia       huge  2022     0.483858   \n",
+       "608                   Retail  Czech Republic     medium  2022     0.730000   \n",
+       "609              Video games         Vietnam      large  2022     0.489195   \n",
+       "610     Financial technology         Senegal     medium  2022     0.560840   \n",
+       "\n",
+       "     GDP_blnUSD  GDP_per_capita_tUSD  Population  Innovation_Score  Tax_Score  \n",
+       "0      2189.790             56.94520    38454327             50.80       69.3  \n",
+       "1      2189.790             56.94520    38454327             50.80       69.3  \n",
+       "2      2189.790             56.94520    38454327             50.80       69.3  \n",
+       "3      2189.790             56.94520    38454327             50.80       69.3  \n",
+       "4      2189.790             56.94520    38454327             50.80       69.3  \n",
+       "..          ...                  ...         ...               ...        ...  \n",
+       "606      40.830             22.06250     1850651             36.50       89.9  \n",
+       "607     319.290              6.15510    51874024             29.20       57.8  \n",
+       "608     290.000             27.53300    10533000             44.83       71.9  \n",
+       "609     415.493              4.23166    98186856             34.20        0.0  \n",
+       "610      30.039              1.73471    17316449             19.90        0.0  \n",
+       "\n",
+       "[611 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1c1a57d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correlation_rule_of_law: 0.045616189743558196\n",
+      "correlation_gdp : 0.16317085727714595\n",
+      "correlation_gdp_p_c: 0.12152562939021763\n",
+      "correlation_population: -0.01850735483111268\n",
+      "correlation_inn_score: 0.14380781911707405\n",
+      "correlation_tax_score: 0.12276622942527876\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calclating correlations\n",
+    "correlation_rule_of_law = full_table['Valuation_US_billions'].corr(full_table['rule_of_law'])\n",
+    "print('correlation_rule_of_law:', correlation_rule_of_law)\n",
+    "\n",
+    "correlation_gdp = full_table['Valuation_US_billions'].corr(full_table['GDP_blnUSD'])\n",
+    "print('correlation_gdp :', correlation_gdp)\n",
+    "\n",
+    "correlation_gdp_p_c = full_table['Valuation_US_billions'].corr(full_table['GDP_per_capita_tUSD'])\n",
+    "print('correlation_gdp_p_c:', correlation_gdp_p_c)\n",
+    "\n",
+    "correlation_population = full_table['Valuation_US_billions'].corr(full_table['Population'])\n",
+    "print('correlation_population:', correlation_population)\n",
+    "\n",
+    "correlation_inn_score = full_table['Valuation_US_billions'].corr(full_table['Innovation_Score'])\n",
+    "print('correlation_inn_score:', correlation_inn_score)\n",
+    "\n",
+    "correlation_tax_score = full_table['Valuation_US_billions'].corr(full_table['Tax_Score'])\n",
+    "print('correlation_tax_score:', correlation_tax_score)"
    ]
   }
  ],
